# advent_of_code

./: README.md
2022/: README.MD  README.md
2022/ex01/: package.json
2022/ex02/: package.json  tsconfig.json
2022/ex03/: package.json
2022/ex04/: index.ts  package.json
2022/ex05/: Move.ts  index.ts  package.json
2022/ex06/: index.ts  package.json
2022/ex07/: DirSize.ts  Directory.ts  index.ts  package.json
2022/ex08/: index.ts  package.json
2022/ex09/: Direction.ts  Move.ts  Node.ts  index.ts  package.json
2022/ex10/: index.ts  package.json
2022/ex11/: DataType.ts  Monkey.ts  MonkeyProps.ts  OperationProps.ts  index.ts  package.json  tsconfig.json
2022/ex12/: Graph.ts  Node.ts  NodeConnection.ts  index.ts  package.json
2022/ex13/: index.ts  package.json  tsconfig.json
2022/ex14/: .eslintrc.yml  package.json  tsconfig.json
2023/: Cargo.toml  README.md
2023/ex01/: result2.txt
2023/ex01/src/: main.rs
2023/ex02/: input.txt
2023/ex02/src/: main.rs
2023/ex03/src/: main.rs
2023/ex04/src/: main.rs
2023/ex06/: input.txt
2023/ex06/src/: main.rs
2023/ex09/: Cargo.toml
2023/ex10/: Cargo.toml
2023/ex11/: Cargo.toml
2023/ex12/: Cargo.toml
2023/ex13/: Cargo.toml
2023/ex14/: Cargo.toml
2023/ex15/: Cargo.toml
2023/ex16/: Cargo.toml
2023/ex17/: Cargo.toml
2023/ex18/: Cargo.toml
2023/ex19/: Cargo.toml
2023/ex20/: Cargo.toml
2023/ex21/: Cargo.toml
2023/ex22/: Cargo.toml
2023/ex23/: Cargo.toml
2023/ex24/: Cargo.toml
2023/ex25/: Cargo.toml
ex1/: .gitignore  index.ts  package.json
ex3/: package.json
(+20 files in other folders)
