[workspace]
resolver = "2"

members = [
    "ex01",
    "ex02",
    "ex03",
    "ex04",
    "ex05",
    "ex06",
    "ex07",
    "ex08",
    "ex09",
    "ex10",
    "ex11",
    "ex12",
    "ex13",
    "ex14",
    "ex15",
    "ex16",
    "ex17",
    "ex18",
    "ex19",
    "ex20",
    "ex21",
    "ex22",
    "ex23",
    "ex24",
    "ex25"
]